--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title>CSS Basics</title>
     </head>
     <body>
-
-
+<h1> Welcome to bens portfolio </h1>
+<img src="csc106_banner.jpg">
+        
     
     </body>
 </html>
