--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             <tr>
                 <td>
                       <a href="index.html">
-                            <img src="home.jpg"> 
+                            <img src="home.png"> 
                         </a>
                 </td>
                   <td>
                       <a href="javascripts.html">
-                            <img src="javascipts.jpg"> 
+                            <img src="javascipt.png"> 
                         </a>
                 </td>
                                 <td>
-                      <a href="index.html">
-                            <img src="home.jpg"> 
+                      <a href="aboutme.html">
+                            <img src="aboutmebutton.png"> 
                         </a>
                 </td>
             
