--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         </a>
                 </td>
                   <td>
-                      <a href="javascripts.html">
+                      <a href="javascript.html">
                             <img src="javascipt.png"> 
                         </a>
                 </td>
@@ -30,7 +30,7 @@
             </tr>
         </table>
         
-        <p>Hello this is my home page!</p>
+        <p>computer science is fun and it will be a large part of our future!</p>
         
     </body>
 </html>
