--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </td>
                   <td>
                       <a href="javascript.html">
-                            <img src="javascipt.png"> 
+                            <img src="javascript.png"> 
                         </a>
                 </td>
                                 <td>
