--- a/aboutme.html
+++ b/aboutme.html
@@ -12,13 +12,13 @@
         <table>
             <tr>
                 <td>
-                      <a href="index.html">
+                      <a href="home.html">
                             <img src="home.png"> 
                         </a>
                 </td>
                   <td>
-                      <a href="javascripts.html">
-                            <img src="javascipt.png"> 
+                      <a href="javascript.html">
+                            <img src="javascript.png"> 
                         </a>
                 </td>
                                 <td>
