--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
         <table>
             <tr>
                 <td>
-                      <a href="home.html">
+                      <a href="index.html">
                             <img src="home.png"> 
                         </a>
                 </td>
