--- a/javascrip.html
+++ b/javascrip.html
@@ -30,7 +30,7 @@
             </tr>
         </table>
         
-        <p>Hello this is my home page!</p>
+        <p>Hello this is my javascript page, java script is really fun!</p>
         
     </body>
 </html>
