--- a/javascript.html
+++ b/javascript.html
@@ -30,7 +30,7 @@
             </tr>
         </table>
         
-        <p>computer science is fun and it will be a large part of our future!</p>
+        <p>I think coding is really cool and cyber security interests me, learning code is just like learning a new language fun!</p>
         
     </body>
 </html>
