--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
             </tr>
         </table>
         
-        <p>This is my about me page, I am really smart but i never try so im actually just unintelligent.</p>
+        <p>This is my about me page, I am really smart but i never try so im actually just really stupid.</p>
         
     </body>
 </html>
