--- a/javascript.html
+++ b/javascript.html
@@ -30,7 +30,9 @@
             </tr>
         </table>
         
-        <p>I think coding is really cool and cyber security interests me, learning code is just like learning a new language fun!</p>
+        <p>I think coding is really cool and cyber security interests me, learning code is just like learning a new language fun!<br> 
+            and this website has its own language behind it there is a code that makes everything happen, everything expands <br>
+        and has more to it than meets the eye, everything can be expanded to a different perspective, and that is code in a jist.</p>
         
     </body>
 </html>
