--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <h1> Welcome to bens portfolio </h1>
-<img src="csc106_banner.jpg">
+<img src="mybanner.jpg">
 
         
         <table>
