--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
         <p>This is my about me page, I am a Jewish hockey player and a finance major, who has no clue how to code yet.</p>
         <img src="benbriskin.jpg"> 
         <p> This is me at my school graduation </p>
-        <img src= "backrounfd.jpg"> 
+        <img src= "mybackround.jpg"> 
         <p> This is me playing ice hockey for my school </p>
     </body>
 </html>
