--- a/aboutme.html
+++ b/aboutme.html
@@ -28,12 +28,18 @@
                 </td>
             
             </tr>
+            <p>This is my about me page, I am a Jewish hockey player and a finance major, who has no clue how to code yet.</p>
         </table>
-        
-        <p>This is my about me page, I am a Jewish hockey player and a finance major, who has no clue how to code yet.</p>
+        <table>
+            <tr>
+                <td>
         <img src="benbriskin.jpg"> 
         <p> This is me at my school graduation </p>
+                </td>
+                <td>
         <img src= "mybackround.jpg"> 
-        <p> This is me playing ice hockey for my school </p>
+        <p> This is me playing ice hockey for my school, before we won states. </p>
+                </td>
+            </tr>
     </body>
 </html>
