--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
         <table>
             <tr>
                 <td>
-        <img src="benbriskin.jpg"> 
+        <img src="b505DCAFB-2EC9-4224-B519-1375ADC860F9.heic"> 
         <p> This is me at my school graduation </p>
                 </td>
                 <td>
