--- a/aboutme.html
+++ b/aboutme.html
@@ -34,11 +34,11 @@
             <tr>
                 <td>
         <img src="theboys.jpg"> 
-        <p> This is me at my school graduation </p>
+        <p> This is me and my high school friends before prom. </p>
                 </td>
                 <td>
         <img src= "mybackround.jpg"> 
-        <p> This is me playing ice hockey for my school, before we won states. </p>
+        <p> This is me playing ice hockey for my school, before we played pink the rink. </p>
                 </td>
             </tr>
     </body>
