--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </tr>
         </table>
         
-        <p>computer science is fun and it will be a large part of our future!</p>
+        <p><h2><a href="https://www.khanacademy.org/computer-programming/briskin_bitmoji/5046992160112640">briskin_bitmoji </a></h2><script src="https://www.khanacademy.org/computer-programming/briskin_bitmoji/5046992160112640/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>            computer science is fun and it will be a large part of our future!</p>
         
     </body>
 </html>
