--- a/javascript.html
+++ b/javascript.html
@@ -26,8 +26,8 @@
                             <img src="aboutmebutton.png"> 
                         </a>
                 </td>
-            
-            </tr>
+     <a href= "https://www.khanacademy.org/computer-programming/spin-off-of-ben_edc-app/5749798608781312" >
+         </tr>
         </table>
         <p> https://github.com/bennybrisk/bennybrisk.github.io </p>
       
