--- a/javascript.html
+++ b/javascript.html
@@ -26,7 +26,7 @@
                             <img src="aboutmebutton.png"> 
                         </a>
                 </td>
-     <a href= "https://www.khanacademy.org/computer-programming/spin-off-of-ben_edc-app/5749798608781312" >
+     <p> href= "https://www.khanacademy.org/computer-programming/spin-off-of-ben_edc-app/5749798608781312" </p>
          </tr>
         </table>
         <p> https://github.com/bennybrisk/bennybrisk.github.io </p>
