--- a/javascript.html
+++ b/javascript.html
@@ -29,7 +29,8 @@
      
          </tr>
         </table>
+        <img src= "file:///Users/bennybrisk/Pictures/Photos%20Library.photoslibrary/private/com.apple.Photos/ExternalEditSessions/53C2E5A5-90FD-4231-A5E3-B50FDE868E6E/Image%2011-10-20%20at%205.19%20PM.jpeg" > 
         <p> https://github.com/bennybrisk/bennybrisk.github.io </p>
-      <p> https://www.khanacademy.org/computer-programming/spin-off-of-ben_edc-app/5749798608781312 </p>        
+      <p>https://www.khanacademy.org/computer-programming/spin-off-of-ben_edc-app/5749798608781312</p>        
     </body>
 </html>
