--- a/javascript.html
+++ b/javascript.html
@@ -26,6 +26,11 @@
                             <img src="aboutmebutton.png"> 
                         </a>
                 </td>
+                   <td>
+                      <a href="finalProject.html">
+                            <img src="finalProject.png"> 
+                        </a>
+                </td>
      
          </tr>
         </table>
