--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
                             <img src="aboutmebutton.png"> 
                         </a>
                 </td>
-            
+                <td>
+                      <a href="finalProject.html">
+                            <img src="finalProject.png"> 
+                        </a>
+                </td>
             </tr>
         </table>
         
