--- a/finalProject.html
+++ b/finalProject.html
@@ -35,5 +35,7 @@
       
                 </td>
             </tr>
+    
+          </a></h2><script src="https://www.khanacademy.org/computer-programming/ryan-golden-ben-briskin-final-project/5399784995635200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>   
     </body>
 </html>
