--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,11 @@
                             <img src="aboutmebutton.png"> 
                         </a>
                 </td>
-            
+                <td>
+                    <a href="finalProject.html">
+                        <img src="finalProject.jpg">
+                    </a>
+                </td>
             </tr>
             <p>This is my about me page, I am a Jewish hockey player and a finance major, who has no clue how to code yet.</p>
         </table>
