--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </td>
                 <td>
                       <a href="finalProject.html">
-                            <img src="finalProject.png"> 
+                            <img src="finalProject.jpg"> 
                         </a>
                 </td>
             </tr>
