--- a/javascript.html
+++ b/javascript.html
@@ -31,6 +31,11 @@
                             <img src="finalProject.png"> 
                         </a>
                 </td>
+                <td>
+                      <a href="finalProject.html">
+                            <img src="finalProject.jpg"> 
+                        </a>
+                </td>
      
          </tr>
         </table>
