--- a/finalProject.html
+++ b/finalProject.html
@@ -26,7 +26,11 @@
                             <img src="aboutmebutton.png"> 
                         </a>
                 </td>
-            
+                 <td>
+                      <a href="finalProject.html">
+                            <img src="finalProject.jpg"> 
+                        </a>
+                </td>
             </tr>
             <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game!!!</p>
         </table>
