--- a/finalProject.html
+++ b/finalProject.html
@@ -32,7 +32,7 @@
                         </a>
                 </td>
             </tr>
-            <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game!!!</p>
+            <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game and I created a discription just bellow the game code!!!</p>
         </table>
         <table>
     
@@ -40,6 +40,17 @@
                 </td>
             </tr>
     
-          </a></h2><script src="https://www.khanacademy.org/computer-programming/ryan-golden-ben-briskin-final-project/5399784995635200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>   
+          </a></h2><script src="https://www.khanacademy.org/computer-programming/ryan-golden-ben-briskin-final-project/5399784995635200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p> 
+
+<p> I created the code for floppy fish and I made it easy enough for any ages to play, this cdoe is pretty simple to start playing youc an click start game! 
+    <br>
+    If you do not know how to play the game yet and you have never played flappy bird there is a button called how to play, this explains how to play the game!
+    <br>
+    once you click begin game the game will start running, the game will display a fish that is floating, the goal is to make it through the obsacles, in order
+    <br>
+    to make it to the winning screen, this is achieved by playing the game and reaching the selected score to win, it depends on which level you are playing!
+    <br>
+    this makes the game fun and harder for those who are too good! the game has coins or stars that appear in between each onstacle, your goal is to collect all of them!
+    <p>
     </body>
 </html>
