--- a/finalProject.html
+++ b/finalProject.html
@@ -32,7 +32,7 @@
                         </a>
                 </td>
             </tr>
-            <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game and I created a discription just bellow the game code!!!</p>
+            <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game and I created short discription just above the game code!!!</p>
         </table>
         <table>
     
