--- a/finalProject.html
+++ b/finalProject.html
@@ -32,7 +32,9 @@
                         </a>
                 </td>
             </tr>
-            <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game and I created short discription just above the game code!!!</p>
+            <p>This is my page that contains my final project for CSC106, we made a moderation of the flappy bird game and I created short discription just above the game code!!!
+            <br> 
+            If you have any question on my game you can contact me at benbriskin@outlook.com I apriciate and hope to hear any and all concerns from the users! </p>
         </table>
         <table>
     
