--- a/finalProject.html
+++ b/finalProject.html
@@ -55,6 +55,7 @@
     this makes the game fun and harder for those who are too good! the game has coins or stars that appear in between each onstacle, your goal is to collect all of them!
     <p>
         
-          </a></h2><script src="https://www.khanacademy.org/computer-programming/ben-briskin-and-ryan-golden-final-project/6469447718486016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p> 
+          </a></h2><script src="https://www.khanacademy.org/computer-programming/ben-briskin-and-ryan-golden-final-project/6469447718486016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+ </a></h2><script src="https://www.youtube.com/watch?v=djcZ8jYEl0M/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><
     </body>
 </html>
