--- a/finalProject.html
+++ b/finalProject.html
@@ -56,8 +56,8 @@
     <p>
         
           </a></h2><script src="https://www.khanacademy.org/computer-programming/ben-briskin-and-ryan-golden-final-project/6469447718486016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
-  </a></h2><script src="https://www.youtube.com/watch?v=X8ESe6yxlx0/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.youtube.com">Youtubes platform</a></p>
+  </a></h2><script src="https://www.youtube.com/watch?v=X8ESe6yxlx0/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="https://www.youtube.com/watch?v=X8ESe6yxlx0">Link to my video</a></p>
  
-</a></h2><script src="https://www.youtube.com/watch?v=djcZ8jYEl0M/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.youtube.com">Youtubes platform </a></p>
+</a></h2><script src="https://www.youtube.com/watch?v=djcZ8jYEl0M/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="//www.youtube.com/watch?v=djcZ8jYEl0M"> This is the link to my video </a></p>
     </body>
 </html>
