--- a/finalProject.html
+++ b/finalProject.html
@@ -46,7 +46,7 @@
  
 </a></h2><script src="https://www.youtube.com/watch?v=djcZ8jYEl0M/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="//www.youtube.com/watch?v=djcZ8jYEl0M"> This is the link to my video </a></p>
 
-      </a></h2><script src="https://www.khanacademy.org/computer-programming/ben-briskin-and-ryan-golden-final-project/6469447718486016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+      </a></h2><script src="https://www.khanacademy.org/computer-programming/ben-briskin-and-ryan-golden-final-project/6469447718486016/embed.jseditor=no&buttons=no&author=no&embed=yes"></script><p>Made by Benjamin Briskin using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
   
 
 <p> I created the code for floppy fish and I made it easy enough for any ages to play, this cdoe is pretty simple to start playing youc an click start game! 
